# PCGP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
MaxEnt2025_paper/: get_graphs.ipynb  replicate_results_requirements.txt
MaxEnt2025_paper/.ipynb_checkpoints/: get_graphs-checkpoint.ipynb  graphs_for_presentation-checkpoint.ipynb  tobedeleted-checkpoint.ipynb
MaxEnt2025_paper/Experiment1_Helmholtz/: Experiment1_Helmholtz.py  MSE_metric.py  main.py  simulate_input.py  writing_kernel.py
MaxEnt2025_paper/Experiment1_Helmholtz/input_data/: Ex1_nr10_np15_nbc30_ntest21.npz
MaxEnt2025_paper/Experiment1_Helmholtz/output_data/: Ex1_nr10_np15_nbc30_ntest21.npz
MaxEnt2025_paper/Experiment2_Bipendulum/: Ex2_AE_of_MAP.py  Ex2_Bayes.py  Ex2_Kullback_Leibler.py  run_Bayes.sh  run_experiments.sh  simulate_input.py
MaxEnt2025_paper/Experiment2_Bipendulum/Experiment2_NSB/: Experiment2_NSB.py  Experiment2_NSB_numpyro.py  main.py  writing_kernel.py
MaxEnt2025_paper/Experiment2_Bipendulum/Experiment2_PIGP/: Experiment2_PIGP.py  Experiment2_PIGP_numpyro.py  main.py  writing_kernel.py
MaxEnt2025_paper/Experiment3_LumpedHeat/: Experiment3_LumpedHeat.py  Experiment3_LumpedHeat_numpyro.py  main.py  simulate_input.py  writing_kernel.py
PCGP/: __init__.py  constraint_handling.py  diffeq_kernel.py  generator_gpytorch.py  generator_numpyro.py  gpytorch_tools.py  symbolic_kernels.py
PCGP.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Tutorials/Tutorial_1/: 1_Tutorial.ipynb  Model_1.py  Model_1_numpyro.py
(+1131 files in other folders)
