[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PCGP"
version = "1.0.0"
description = "This is the first version of the package PCGP (physics-consistent Gaussian Processes), that uses parametrization to find solutions for differential equations and related issues."
authors = [{ name = "Johanna Moser", email = "j.moser@tugraz.com" }]
dependencies = [
    "einops>=0.8.1",
    "gpytorch>=1.14",
    "jax>=0.6.0",
    "Jinja2>=3.1.6",
    "numpy>=2.3.2",
    "numpyro>=0.18.0",
    "sympy>=1.14.0",
    "torch>=2.7.0"
]
[tool.setuptools]
packages = ["PCGP"]
[project.optional-dependencies]
experiments = ["matplotlib>=3.7", "jupyter>=1.0"]